samples/_failures_safe/1761171421_df8706_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb5ebd8d.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_bb5ebd8d.c:130:24: error: missing terminating " character
  130 |     m->rows = read_int("Rows (
      |                        ^~~~~~~
./samples/SAFE/__tmp_bb5ebd8d.c:130:5: error: expected expression at end of input
  130 |     m->rows = read_int("Rows (
      |     ^
./samples/SAFE/__tmp_bb5ebd8d.c:130:15: error: too few arguments to function ‘read_int’
  130 |     m->rows = read_int("Rows (
      |               ^~~~~~~~
./samples/SAFE/__tmp_bb5ebd8d.c:98:5: note: declared here
   98 | int read_int(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_bb5ebd8d.c:130:5: error: expected declaration or statement at end of input
  130 |     m->rows = read_int("Rows (
      |     ^
